# philote-examples

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  documentation.yaml  publish-pypi.yaml  release.yaml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/about/: contributing.md  license.md
docs/docs/api/: oas-aerostruct-disciplines.md  oas-discipline.md  xfoil-discipline.md
docs/docs/disciplines/: oas-aerostruct.md  oas-vlm.md  xfoil-analysis.md
docs/docs/getting-started/: quickstart.md
docs/docs/tutorials/: oas-aerostruct-analysis.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/versioned_docs/version-0.1.0/api/: naca-discipline.md
docs/versioned_docs/version-0.1.0/disciplines/: naca-airfoil.md
docs/versioned_docs/version-0.1.0/getting-started/: installation.md
docs/versioned_docs/version-0.1.0/tutorials/: naca-xfoil-analysis.md  oas-vlm-analysis.md
docs/versioned_sidebars/: version-0.1.0-sidebars.json
examples/: benchmark.py  naca_server.py
examples/naca_xfoil/: README.md  naca_server.py  run_analysis.py  run_inviscid_analysis.py  xfoil_server.py
examples/oas_aerostruct/: run_analysis.py  server.py
examples/oas_aerostruct_large/: run_analysis.py  server.py
examples/oas_aerostruct_split/: aero_server.py  geom_server.py  run_analysis.py  struct_server.py
examples/oas_aerostruct_split_large/: aero_server.py  geom_server.py  run_analysis.py  struct_server.py
examples/oas_vlm/: README.md  run_analysis.py  server.py
examples/oas_vlm_large/: run_analysis.py  server.py
src/philote_examples/: __init__.py  naca.py
src/philote_examples/oas/: __init__.py  discipline.py  oas_aero_discipline.py  oas_aerostruct_discipline.py  oas_discipline.py  oas_geom_discipline.py  oas_struct_discipline.py
src/philote_examples/xfoil/: __init__.py  discipline.py  wrapper.py  xfoil_discipline.py
tests/: test_naca_gradients.py  test_naca_xfoil.py
