[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philote-examples"
version = "0.1.0"
description = "Example Philote disciplines for MDO applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "philote-mdo",
    "openmdao",
    "openaerostruct",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff – linting & formatting
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "xfoil: tests requiring a working XFOIL binary (skipped in CI)",
]

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long – handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["philote_examples"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]   # allow non-PEP8 names in tests (e.g. Cl, Cd)
