[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "philote-examples"
version = "0.2.0"
description = "Example Philote disciplines for MDO applications"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Christopher Lupp"}]
keywords = ["mdo", "optimization", "philote", "aerodynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "philote-mdo",
    "openmdao",
    "openaerostruct",
    "numpy",
]

[project.urls]
Homepage = "https://mdo-standards.github.io/philote-examples/"
Repository = "https://github.com/MDO-Standards/philote-examples"
Documentation = "https://mdo-standards.github.io/philote-examples/"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff – linting & formatting
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "xfoil: tests requiring a working XFOIL binary (skipped in CI)",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long – handled by the formatter
]

[tool.ruff.lint.isort]
known-first-party = ["philote_examples"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]   # allow non-PEP8 names in tests (e.g. Cl, Cd)
